# emberline

./: .gitignore  CLAUDE.md  PUBLISHING.md  README.md
.github/workflows/: publish-extension.yml  publish-server.yml
docs/: ai-code-check-checklist.md  typescript-migration.md
docs/design/: README.md  status-icon-design.html
extension/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
extension/scripts/: build-icon-font.mjs  fetch-llama.mjs  verify-vsix.mjs
extension/src/: config.ts  extension.ts  logging.ts  onboarding.ts  provider.ts  status.ts  wire.ts
extension/src/client/: http.ts
extension/src/completion/: context.ts  debounce.ts
extension/src/engine/: assemble.ts  cache.ts  config.ts  examples.ts  http.ts  httpc.ts  idle.ts  infill.ts  llama.ts  main.ts  postprocess.ts  ring.ts  supersede.ts  tokens.ts  types.ts
extension/src/server/: manage.ts  uv.ts
extension/src/test/: icon-font.test.ts  integration.test.ts  unit.test.ts
extension/src/test/engine/: assemble.test.ts  cache.test.ts  config.test.ts  examples.test.ts  http.test.ts  idle.test.ts  infill.test.ts  (+6 more)
server/: pyproject.toml
server/src/emberline/: __main__.py  config.py  main.py  postprocess.py
server/src/emberline/api/: routes.py  schemas.py
server/src/emberline/context/: assemble.py  examples.py  ring.py
server/src/emberline/engine/: cache.py  supersede.py
server/src/emberline/runtime/: idle.py  infill.py  llama_server.py
server/tests/: test_engine.py  test_idle.py  test_postprocess.py
